adjustment for the sun

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="overlay"></div>
     <div class="overlay2 none"></div>
     <div class="moon-make"></div>
-    <div class="sun-make"></div>
+    <div class="sun-make none"></div>
     <div class="overlay-cloud"></div>
 
     <script src="script.js"></script>
